--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -f --dotfiles"
   },
   "dependencies": {
     "react": "^19.1.0",
